--- a/MEKAR.html
+++ b/MEKAR.html
@@ -135,7 +135,7 @@
 
     <section id="detail" class="card" style="display:none">
       <div class="detail-header">
-        <button class="detail-tab active" onclick="showDetailContent('sunflower')">🌻 Bunga Matahari</button>
+        <button class="detail-tab" onclick="showDetailContent('sunflower')">🌻 Bunga Matahari</button>
         <button class="detail-tab" onclick="showDetailContent('rose')">🌹 Mawar</button>
         <button class="detail-tab" onclick="showDetailContent('petunia')">🌸 Petunia</button>
         <button class="detail-tab" onclick="showDetailContent('strawberry')">🍓 Strawberry</button>
